--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@openzeppelin/contracts": "^5.0.2",
     "hardhat": "^2.19.5"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^5.0.1"
   }
 }
